# toy-os-rust

./: .gitignore  Cargo.toml  README.md  break_entry_point.py  build.rs
font_binary_gen/: Cargo.toml
font_binary_gen/src/: lib.rs
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: main.rs
kernel/src/alloc/: mod.rs  paging.rs
kernel/src/video/: mod.rs
src/: main.rs
