[package]
name = "toy-os"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
bootloader = "0.11.0"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[workspace]
members = ["kernel", "font_binary_gen"]